--- a/AuraDDX.Viewer/AuraDDX.Viewer.csproj
+++ b/AuraDDX.Viewer/AuraDDX.Viewer.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
@@ -17,14 +17,25 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommandLineParser" Version="2.9.1" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\AuraDDX.Debugging\AuraDDX.Debugging.csproj" />
     <ProjectReference Include="..\AuraDDX.DirectX\AuraDDX.DirectX.csproj" />
     <ProjectReference Include="..\AuraDDX.ExtensionManager\AuraDDX.Extension.csproj" />
     <ProjectReference Include="..\AuraDDX.Integrity\AuraDDX.Integrity.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
