Replaced Logging dep with Event Handlings

--- a/AuraDDX.Viewer/AuraDDX.Viewer.csproj
+++ b/AuraDDX.Viewer/AuraDDX.Viewer.csproj
@@ -9,7 +9,18 @@
     <StartupObject>AuraViewer.Program</StartupObject>
     <AssemblyName>AuraDDXViewer</AssemblyName>
     <ApplicationIcon>fav.ico</ApplicationIcon>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <NoWin32Manifest>true</NoWin32Manifest>
+    <SignAssembly>False</SignAssembly>
+    <ErrorReport>none</ErrorReport>
+    <Version>2023.9.3</Version>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>embedded</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
