--- a/AuraDDX.DirectX/AuraDDX.DirectX.csproj
+++ b/AuraDDX.DirectX/AuraDDX.DirectX.csproj
@@ -4,10 +4,18 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <NoWin32Manifest>true</NoWin32Manifest>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>embedded</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AuraDDX.Debugging\AuraDDX.Debugging.csproj" />
     <ProjectReference Include="..\AuraDDX.Integrity\AuraDDX.Integrity.csproj" />
   </ItemGroup>
 
