New Updater Feature Reworked UI Menu

--- a/AuraDDX.Integrity/AuraDDX.Integrity.csproj
+++ b/AuraDDX.Integrity/AuraDDX.Integrity.csproj
@@ -15,4 +15,8 @@
     <DebugType>embedded</DebugType>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Octokit" Version="7.1.0" />
+  </ItemGroup>
+
 </Project>
