--- a/AuraDDX.DirectX/AuraDDX.DirectX.csproj
+++ b/AuraDDX.DirectX/AuraDDX.DirectX.csproj
@@ -16,7 +16,30 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\texconv.exe" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\texconv.exe" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AuraDDX.Integrity\AuraDDX.Integrity.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
