--- a/AuraDDX.Viewer/AuraDDX.Viewer.csproj
+++ b/AuraDDX.Viewer/AuraDDX.Viewer.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
@@ -9,10 +9,11 @@
     <StartupObject>AuraViewer.Program</StartupObject>
     <AssemblyName>AuraDDXViewer</AssemblyName>
     <ApplicationIcon>fav.ico</ApplicationIcon>
-    <NoWin32Manifest>true</NoWin32Manifest>
     <SignAssembly>False</SignAssembly>
     <ErrorReport>none</ErrorReport>
-    <Version>2023.9.3</Version>
+    <Version>2023.9.8</Version>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -25,6 +26,13 @@
 
   <ItemGroup>
     <Content Include="fav.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
