Added CommandLineParser Refactor Multithreading Better Logging

--- a/AuraDDX.Viewer/AuraDDX.Viewer.csproj
+++ b/AuraDDX.Viewer/AuraDDX.Viewer.csproj
@@ -36,9 +36,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AuraDDX.Debugging\AuraDDX.Debugging.csproj" />
     <ProjectReference Include="..\AuraDDX.DirectX\AuraDDX.DirectX.csproj" />
-    <ProjectReference Include="..\AuraDDX.ExtensionManager\AuraDDX.Extension.csproj" />
     <ProjectReference Include="..\AuraDDX.Integrity\AuraDDX.Integrity.csproj" />
   </ItemGroup>
 
