--- a/Aura.AHP/Aura.AHP.csproj
+++ b/Aura.AHP/Aura.AHP.csproj
@@ -1,10 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -14,5 +13,10 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DebugType>embedded</DebugType>
   </PropertyGroup>
-
+	
+	<PropertyGroup>
+		<CurrentDate>$([System.DateTime]::Now.ToString('yyyy.M.d'))</CurrentDate>
+		<VersionPrefix Condition="'$(VersionPrefix)' == ''">$(CurrentDate)</VersionPrefix>
+	</PropertyGroup>
+	
 </Project>
