--- a/Aura.AMC/Aura.AMC.csproj
+++ b/Aura.AMC/Aura.AMC.csproj
@@ -1,10 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -15,8 +14,9 @@
     <DebugType>embedded</DebugType>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Octokit" Version="7.1.0" />
-  </ItemGroup>
+	<PropertyGroup>
+		<CurrentDate>$([System.DateTime]::Now.ToString('yyyy.M.d'))</CurrentDate>
+		<VersionPrefix Condition="'$(VersionPrefix)' == ''">$(CurrentDate)</VersionPrefix>
+	</PropertyGroup>
 
 </Project>
